@@ -144,11 +144,10 @@ void G4GAGTreeSceneHandler::Dump (const G4VSolid& solid)
   const G4int detail = verbosity % 10;
 
   if (verbosity < 10 && fReplicaSet.find(fpCurrentPV) != fReplicaSet.end()) {
-    // Ignore if an already treated replica.  (Assumes that the model
-    // which has invoked this function is a G4PhysicalVolumeModel - we
-    // check this by testing fpCurrentPV.)
-    if (fpCurrentPV) {
-      ((G4PhysicalVolumeModel*)fpModel)->CurtailDescent();
+    // Ignore if an already treated replica.
+    G4PhysicalVolumeModel* pPVM = fpModel->GetG4PhysicalVolumeModel();
+    if (pPVM) {
+      pPVM->CurtailDescent();
       return;
     }
   }
